SERVER-46843 Format ISO-8601 date time zone offset according to RFC 3339 Section 5.6