src/mongo/util/time_support_test.cpp
@@ -79,14 +79,14 @@ TEST(TimeFormatting, DateAsISO8601UTCString) {
 }
 
 TEST(TimeFormatting, DateAsISO8601LocalString) {
-    ASSERT_EQUALS(std::string("1969-12-31T19:00:00.000-0500"), dateToISOStringLocal(Date_t()));
-    ASSERT_EQUALS(std::string("1970-06-29T21:06:40.981-0400"),
+    ASSERT_EQUALS(std::string("1969-12-31T19:00:00.000-05:00"), dateToISOStringLocal(Date_t()));
+    ASSERT_EQUALS(std::string("1970-06-29T21:06:40.981-04:00"),
                   dateToISOStringLocal(Date_t::fromMillisSinceEpoch(15556000981LL)));
     if (!isTimeTSmall) {
-        ASSERT_EQUALS(std::string("2058-02-20T13:29:11.100-0500"),
+        ASSERT_EQUALS(std::string("2058-02-20T13:29:11.100-05:00"),
                       dateToISOStringLocal(Date_t::fromMillisSinceEpoch(2781455351100LL)));
     }
-    ASSERT_EQUALS(std::string("2013-02-20T13:29:11.100-0500"),
+    ASSERT_EQUALS(std::string("2013-02-20T13:29:11.100-05:00"),
                   dateToISOStringLocal(Date_t::fromMillisSinceEpoch(1361384951100LL)));
 }
 
@@ -125,17 +125,17 @@ TEST(TimeFormatting, DateAsISO8601UTCStream) {
 }
 
 TEST(TimeFormatting, DateAsISO8601LocalStream) {
-    ASSERT_EQUALS(std::string("1969-12-31T19:00:00.000-0500"),
+    ASSERT_EQUALS(std::string("1969-12-31T19:00:00.000-05:00"),
                   stringstreamDate(outputDateAsISOStringLocal, Date_t()));
     ASSERT_EQUALS(
-        std::string("1970-06-29T21:06:40.981-0400"),
+        std::string("1970-06-29T21:06:40.981-04:00"),
         stringstreamDate(outputDateAsISOStringLocal, Date_t::fromMillisSinceEpoch(15556000981LL)));
     if (!isTimeTSmall) {
-        ASSERT_EQUALS(std::string("2058-02-20T13:29:11.100-0500"),
+        ASSERT_EQUALS(std::string("2058-02-20T13:29:11.100-05:00"),
                       stringstreamDate(outputDateAsISOStringLocal,
                                        Date_t::fromMillisSinceEpoch(2781455351100LL)));
     }
-    ASSERT_EQUALS(std::string("2013-02-20T13:29:11.100-0500"),
+    ASSERT_EQUALS(std::string("2013-02-20T13:29:11.100-05:00"),
                   stringstreamDate(outputDateAsISOStringLocal,
                                    Date_t::fromMillisSinceEpoch(1361384951100LL)));
 }
@@ -206,27 +206,28 @@ TEST(TimeParsing, DateAsISO8601UTC) {
 
 TEST(TimeParsing, DateAsISO8601Local) {
     // Allowed date format:
-    // YYYY-MM-DDTHH:MM[:SS[.m[m[m]]]]+HHMM
+    // YYYY-MM-DDTHH:MM[:SS[.m[m[m]]]]+HH[:]MM
     // Year, month, day, hour, and minute are required, while the seconds component and one to
     // three milliseconds are optional.  The time zone offset must be four digits.
+    // Test with colon in timezone offset, new for mongod version 4.4
 
-    StatusWith<Date_t> swull = dateFromISOString("1971-02-03T09:16:06.789+0511");
+    StatusWith<Date_t> swull = dateFromISOString("1971-02-03T09:16:06.789+05:11");
     ASSERT_OK(swull.getStatus());
     ASSERT_EQUALS(swull.getValue().asInt64(), 34401906789LL);
 
-    swull = dateFromISOString("1971-02-03T09:16:06.78+0511");
+    swull = dateFromISOString("1971-02-03T09:16:06.78+05:11");
     ASSERT_OK(swull.getStatus());
     ASSERT_EQUALS(swull.getValue().asInt64(), 34401906780LL);
 
-    swull = dateFromISOString("1971-02-03T09:16:06.7+0511");
+    swull = dateFromISOString("1971-02-03T09:16:06.7+05:11");
     ASSERT_OK(swull.getStatus());
     ASSERT_EQUALS(swull.getValue().asInt64(), 34401906700LL);
 
-    swull = dateFromISOString("1971-02-03T09:16:06+0511");
+    swull = dateFromISOString("1971-02-03T09:16:06+05:11");
     ASSERT_OK(swull.getStatus());
     ASSERT_EQUALS(swull.getValue().asInt64(), 34401906000LL);
 
-    swull = dateFromISOString("1971-02-03T09:16+0511");
+    swull = dateFromISOString("1971-02-03T09:16+05:11");
     ASSERT_OK(swull.getStatus());
     ASSERT_EQUALS(swull.getValue().asInt64(), 34401900000LL);
 
@@ -259,12 +260,12 @@ TEST(TimeParsing, DateAsISO8601Local) {
     // ASSERT_OK(swull.getStatus());
     // ASSERT_EQUALS(swull.getValue().asInt64(), 18060000LL);
 
-    swull = dateFromISOString("1970-06-29T21:06:40.981-0400");
+    swull = dateFromISOString("1970-06-29T21:06:40.981-04:00");
     ASSERT_OK(swull.getStatus());
     ASSERT_EQUALS(swull.getValue().asInt64(), 15556000981LL);
 
     if (!isTimeTSmall) {
-        swull = dateFromISOString("2058-02-20T13:29:11.100-0500");
+        swull = dateFromISOString("2058-02-20T13:29:11.100-05:00");
         ASSERT_OK(swull.getStatus());
         ASSERT_EQUALS(swull.getValue().asInt64(), 2781455351100LL);
 
@@ -275,6 +276,52 @@ TEST(TimeParsing, DateAsISO8601Local) {
         swull = dateFromISOString("2038-01-19T03:14:07Z");
         ASSERT_OK(swull.getStatus());
         ASSERT_EQUALS(swull.getValue().asInt64(), 2147483647000LL);
+    }
+
+    swull = dateFromISOString("2013-02-20T13:29:11.100-05:00");
+    ASSERT_OK(swull.getStatus());
+    ASSERT_EQUALS(swull.getValue().asInt64(), 1361384951100LL);
+
+    swull = dateFromISOString("2013-02-20T13:29:11.100-05:01");
+    ASSERT_OK(swull.getStatus());
+    ASSERT_EQUALS(swull.getValue().asInt64(), 1361385011100LL);
+}
+
+TEST(TimeParsing, DateAsISO8601LocalNoColon) {
+    // Allowed date format:
+    // YYYY-MM-DDTHH:MM[:SS[.m[m[m]]]]+HH[:]MM
+    // Year, month, day, hour, and minute are required, while the seconds component and one to
+    // three milliseconds are optional.  The time zone offset must be four digits.
+    // Test with colon in timezone offset, the format used by mongod version < 4.4
+
+    StatusWith<Date_t> swull = dateFromISOString("1971-02-03T09:16:06.789+0511");
+    ASSERT_OK(swull.getStatus());
+    ASSERT_EQUALS(swull.getValue().asInt64(), 34401906789LL);
+
+    swull = dateFromISOString("1971-02-03T09:16:06.78+0511");
+    ASSERT_OK(swull.getStatus());
+    ASSERT_EQUALS(swull.getValue().asInt64(), 34401906780LL);
+
+    swull = dateFromISOString("1971-02-03T09:16:06.7+0511");
+    ASSERT_OK(swull.getStatus());
+    ASSERT_EQUALS(swull.getValue().asInt64(), 34401906700LL);
+
+    swull = dateFromISOString("1971-02-03T09:16:06+0511");
+    ASSERT_OK(swull.getStatus());
+    ASSERT_EQUALS(swull.getValue().asInt64(), 34401906000LL);
+
+    swull = dateFromISOString("1971-02-03T09:16+0511");
+    ASSERT_OK(swull.getStatus());
+    ASSERT_EQUALS(swull.getValue().asInt64(), 34401900000LL);
+
+    swull = dateFromISOString("1970-06-29T21:06:40.981-0400");
+    ASSERT_OK(swull.getStatus());
+    ASSERT_EQUALS(swull.getValue().asInt64(), 15556000981LL);
+
+    if (!isTimeTSmall) {
+        swull = dateFromISOString("2058-02-20T13:29:11.100-0500");
+        ASSERT_OK(swull.getStatus());
+        ASSERT_EQUALS(swull.getValue().asInt64(), 2781455351100LL);
     }
 
     swull = dateFromISOString("2013-02-20T13:29:11.100-0500");
